Added name title and logout

--- a/VantecWeb/index.html
+++ b/VantecWeb/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <div class="outterdiv">
-        <div id="maindiv">
-        </div>
+        <div id="maindiv"></div>
+        <div id="usernamediv">Login New User</div>
         <div id="framescontainer"></div>
     </div>
 </body>
