--- a/VantecWeb/HTML/index.html
+++ b/VantecWeb/HTML/index.html
@@ -907,7 +907,7 @@
                             </span>
                         </div>
                         <div class="input-group">
-                            <input id="txt_bc_check_code1" type="text" class="form-control" aria-label="Text input with dropdown button" style="font-size: 3rem;">
+                            <input id="txt_bc_check_code1" type="text" class="form-control" aria-label="Text input with dropdown button" style="font-size: 3rem;" autocomplete="off">
                             <input id="txt_bc_check_code1_proxy" type="password" class="form-control input-proxy" aria-label="Text input with dropdown button">
                         </div>
                         <div class="m-stack__item m-stack__item--right m-stack__item--middle">
@@ -916,7 +916,7 @@
                             </span>
                         </div>
                         <div class="input-group">
-                            <input id="txt_bc_check_code2" type="text" class="form-control" aria-label="Text input with dropdown button" style="font-size: 3rem;">
+                            <input id="txt_bc_check_code2" type="text" class="form-control" aria-label="Text input with dropdown button" style="font-size: 3rem;" autocomplete="off">
                             <input id="txt_bc_check_code2_proxy" type="password" class="form-control input-proxy" aria-label="Text input with dropdown button">
                         </div>
                     </div>
