--- a/VantecWeb/HTML/index.html
+++ b/VantecWeb/HTML/index.html
@@ -970,7 +970,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="m-stack m-stack--ver m-stack--general m-stack--demo m-stack--demorow">
+                    <!--<div class="m-stack m-stack--ver m-stack--general m-stack--demo m-stack--demorow">
                         <div class="m-stack__item m-stack__item--center m-stack__item--middle">
                             <div class="btn-group" data-toggle="buttons">
                                 <label class="btn m-btn--pill m-btn--air btn-warning rb_setting_direction">
@@ -983,7 +983,7 @@
                                 </label>
                             </div>
                         </div>
-                    </div>
+                    </div>-->
                     <div class="m-stack m-stack--ver m-stack--general m-stack--demo m-stack--demorow">
                         <div class="m-stack__item m-stack__item--center m-stack__item--middle">
                             <div id="btn_open_setting_count_method" class="btn btn-primary m-btn m-btn--bolder main-btn">
@@ -1174,7 +1174,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="m-stack m-stack--ver m-stack--general m-stack--demo m-stack--demorow">
+                    <!--<div class="m-stack m-stack--ver m-stack--general m-stack--demo m-stack--demorow">
                         <div class="m-stack__item m-stack__item--center m-stack__item--middle">
                             <div class="form-group m-form__group row time-row">
                                 <label class="col-form-label" style="margin-top:1%" LanguageKey="MOBILEUSER_SOUND">
@@ -1189,7 +1189,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div>-->
                     <div class="m-stack m-stack--ver m-stack--general m-stack--demo m-stack--demorow radioBtn">
                         <div class="m-stack__item m-stack__item--center m-stack__item--middle">
                             <div class="btn-group" data-toggle="buttons">
