--- a/VantecWeb/index.html
+++ b/VantecWeb/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="outterdiv">
         <div id="maindiv"></div>
-        <div id="usernamediv">Login New User</div>
+        <div id="usernamediv">New User</div>
         <div id="framescontainer"></div>
     </div>
 </body>
