--- a/VantecWeb/HTML/index.html
+++ b/VantecWeb/HTML/index.html
@@ -70,7 +70,7 @@
         <div style="z-index: 998;border: none;margin: 0px;padding: 0px;width: 100%;height: 100%;top: 0px;left: 0px;background-color: rgb(0, 0, 0);opacity: 0.5;cursor: wait;position: fixed;"></div>
     </div>
     <!-- begin:: page_login -->
-    <div id="page_login" class="m-grid m-grid--hor m-grid--root m-page" style="">
+    <div id="page_login" class="m-grid m-grid--hor m-grid--root m-page" style="overflow:auto;">
         <div class="m-grid__item m-grid__item--fluid m-grid m-grid--hor m-login m-login--singin m-login--2 m-login-2--skin-3" style="">
             <div class="m-grid__item m-grid__item--fluid	m-login__wrapper">
                 <div class="m-login__container">
