--- a/VantecWeb/HTML/index.html
+++ b/VantecWeb/HTML/index.html
@@ -94,7 +94,7 @@
                                 <input style="border:2px solid #2f75b5;background:white;border-radius:0.25rem;max-height:50px;" class="form-control m-input" type="text" placeholder="Site ID" id="txt_basecode" name="basecode" autocomplete="off" onkeypress="if(event.keyCode==13) {$('#txt_userid').focus();return false;}" autofocus>
                             </div>
                             <div class="form-group m-form__group">
-                                <input style="border:2px solid #2f75b5;background:white;border-radius:0.25rem;max-height:50px;" class="form-control m-input" type="text" placeholder="ID" id="txt_userid" name="id" autocomplete="off" onkeypress="if(event.keyCode==13) {$('#txt_password').focus();return false;}" >
+                                <input style="border:2px solid #2f75b5;background:white;border-radius:0.25rem;max-height:50px;" class="form-control m-input" type="text" placeholder="ID" id="txt_userid" name="id" autocomplete="off" onkeypress="if(event.keyCode==13) {$('#txt_password').focus();return false;}">
                             </div>
                             <div class="form-group m-form__group">
                                 <input style="border:2px solid #2f75b5;background:white;border-radius:0.25rem;max-height:50px;" class="form-control m-input m-login__form-input--last" type="password" placeholder="Password" id="txt_password" name="password">
@@ -1489,7 +1489,7 @@
     </div>
     <!-- end:: page_top_h_edit -->
     <map name="planetmap"></map>
-    <audio style="display:none;" id="mainalarm" src="./Audio/ok.mp3" autoplay></audio>
+    <audio style="display:none;" id="mainalarm" src="./Audio/ok.mp3"></audio>
 
 
     <!--begin::Base Scripts -->
@@ -1523,6 +1523,7 @@
     <script src="top_edit.js" type="text/javascript"></script>
     <script src="group_person_number_input.js" type="text/javascript"></script>
     <script src="WebViewController.js" type="text/javascript"></script>
+    <script src="WebAudioAPISound.js" type="text/javascript"></script>
     <script type="text/javascript">
         if (!window.webkit) {
             window.webkit = { messageHandlers: new WebViewController() };
@@ -1530,7 +1531,9 @@
         else {
             window.webkit.messageHandlers = new WebViewController();
         }
-
+        var okSound = new WebAudioAPISound("./audio/ok.mp3");
+        var ngSound = new WebAudioAPISound("./audio/ng.mp3");
+        var alertSound = new WebAudioAPISound("./audio/alert.mp3");
     </script>
 </body>
 	<!-- end::Body -->
